          as stream EOF, putting the connection into a hung state.
          (Reported and analyzed in an absolutely exemplary manner by Adam
          Rosenstein).
        - fix a potential segfault in AnyEvent::Handle when the TLS context
          would go missing in a read callback (e.g. due to stoptls) -
          Net::SSLeay of course makes no type checking whatsoever.

4.234 Mon Sep 29 04:08:13 CEST 2008
	- fix child watcher documentation: only child exits will be reported,
          no trace events.
        - mention SIGPIPE in AnyEvent::Handle.
	- perl backend will now use POSIX::times as monotonic clock
          when available and the monotonic clock option is not.
        - run even without Time::HiRes in some cases now, but do not
          provide sub-second accuracy (all *supported* perl versions have
          Time::HiRes).

4.233 Fri Aug 22 01:48:05 CEST 2008
	- fix a bug in the testsuite, causing a hang.
        - clarified lots of AnyEvent::Handle constructor arguments.

4.232 Thu Aug 21 20:44:25 CEST 2008
	- fix a bug in AnyEvent::Handle that could cause two fatal error
          callbacks on EOF, which caused AnyEvent::HTTP to signal success twice
          (testcase by Leon Brocard).
        - clarified on_eof/on_error documentation a bit.

4.231 Tue Jul 29 13:12:15 CEST 2008
        - remove some debugging code left in AnyEvent::Util::fork_call
          (and no, it's impossible to implement with the broken windows
          perls without resource leaks or worse).

4.23 Tue Jul 29 12:19:59 CEST 2008
	- document the first parameter passed to condvar callbacks to be
          the callback.
        - add AnyEvent::Socket::{ntoa,aton} aliases.
        - optimize the AE::Handle->push_read (line) for the default
          eol marker.
        - optimize push_read (packstring|storable) for small packets.
        - invoke on_error callback when no on_eof callback is set.
        - fix a bug in push_read (storable) of unknown impact.
